[fix] Gear form: fix first fields alignment (no padding)

--- a/src/app/shared/material/material.boolean.scss
+++ b/src/app/shared/material/material.boolean.scss
@@ -1,6 +1,7 @@
 :host {
   min-height: 49px;
   display: inline-block;
+  width: 100%;
 }
 
 input.hidden {
