--- a/src/app/trip/physicalgear/physicalgear.form.scss
+++ b/src/app/trip/physicalgear/physicalgear.form.scss
@@ -1,1 +1,3 @@
-
+ion-col[no-padding] {
+  padding: 0 !important;
+}
